# TP-FINAL-RL

./: README.md  pyproject.toml  run_tests.py
savedModels/: ppo_cartpole_10240.pth  ppo_cartpole_102400.pth  ppo_cartpole_122880.pth  ppo_cartpole_143360.pth  ppo_cartpole_15360.pth  ppo_cartpole_163840.pth  ppo_cartpole_184320.pth  ppo_cartpole_20480.pth  ppo_cartpole_204800.pth  ppo_cartpole_25600.pth  ppo_cartpole_30720.pth  ppo_cartpole_35840.pth  ppo_cartpole_40960.pth  ppo_cartpole_46080.pth  ppo_cartpole_5120.pth  ppo_cartpole_51200.pth  ppo_cartpole_56320.pth  ppo_cartpole_61440.pth  ppo_cartpole_66560.pth  ppo_cartpole_71680.pth  ppo_cartpole_76800.pth  ppo_cartpole_81920.pth  ppo_cartpole_87040.pth  ppo_cartpole_92160.pth  ppo_cartpole_97280.pth  ppo_cartpole_final.pth
src/: __init__.py  cartpole.ipynb  config.py  evaluate.py  mainTrainFlappy.py  mainTrainSkiing.py  requirements.txt  test_cartpole.py  test_quick_ppo.py
src/envs/: __init__.py  preprocess.py  wrappers.py
src/logs/: losses.csv  rewards.csv
src/logs/flappy/: rewards.csv
src/plots/: plotRewards.py  trainingCurves.ipynb
src/ppoAgent/: __init__.py  actorCritic.py  gae.py  memory.py  ppo.py  utils.py
src/savedModels/flappy/search/config_1_Baseline/: config.json  ppo_flappy_Baseline_final.pth
src/savedModels/flappy/search/config_1_Baseline/logs/: losses.csv  rewards.csv
src/savedModels/flappy/search/config_1_Baseline/search/config_2_Mayor_Entropia/: config.json  ppo_flappy_Mayor_Entropia_final.pth
test/: test_preprocess.py  test_wrappers.py
(+9 files in other folders)
