[project]
name = "tp-final-rl"
version = "0.1.0"
description = "Proyecto Final de Reinforcement Learning - PPO Agent para Skiing"
authors = [
    {name = "Serena", email = "serena@example.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium[atari]>=0.29.0",
    "gymnasium[accept-rom-license]>=0.29.0",
    "ale-py>=0.8.1",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
    "opencv-python>=4.8.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["src"]